{
    "name": "DefaltAction",
    "maps": [
        {
            "name": "Rocket",
            "id": "421b2078-3c69-499c-bffc-92874663d72c",
            "actions": [
                {
                    "name": "ForceUp",
                    "type": "PassThrough",
                    "id": "ebe26fd9-182f-4623-b33e-e3138d4f9c86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "a6ed496f-2b66-4079-bc40-31f6edc5f1d3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc298ffb-ad0e-4c5f-b4fd-06d99cc5edee",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "929f9be5-0bff-473f-b1ff-734408257c6d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a15789b0-ac9f-44af-966d-d0a521dcf532",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3f3686dd-5e90-4bd2-ab30-916dd14541ef",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}